Changes to place fallback for v2 calls.

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -190,6 +190,8 @@ endpoint:
   institute-api:
     get-all-schools:
       url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/school
+    get-schools-paginated:
+      url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/school/paginated
     get-school-details-by-id:
       url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/school/%s
     get-all-districts:
