--- a/api/pom.xml
+++ b/api/pom.xml
@@ -33,7 +33,8 @@
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
             src/main/java/ca/bc/gov/educ/api/trax/repository/**,
-            src/main/java/ca/bc/gov/educ/api/trax/filter/**
+            src/main/java/ca/bc/gov/educ/api/trax/filter/**,
+            src/main/java/ca/bc/gov/educ/api/trax/controller/APIMetadataController*.java
         </sonar.junit.exclusions>
         <java.version>18</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
