--- a/api/pom.xml
+++ b/api/pom.xml
@@ -33,9 +33,11 @@
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**,
             src/main/java/ca/bc/gov/educ/api/trax/repository/**,
-            src/main/java/ca/bc/gov/educ/api/trax/filter/**,
-            src/main/java/ca/bc/gov/educ/api/trax/controller/APIMetadataController.java
+            src/main/java/ca/bc/gov/educ/api/trax/filter/**
         </sonar.junit.exclusions>
+        <sonar.coverage.exclusions>
+            src/main/java/ca/bc/gov/educ/api/trax/controller/APIMetadataController.java
+        </sonar.coverage.exclusions>
         <java.version>18</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
