GRAD2-3283 - Apply client authentication to GRAD-TRAX-API

--- a/tools/config/clients-config.json
+++ b/tools/config/clients-config.json
@@ -21,7 +21,7 @@
     }
   },
   {
-    "clientId": "grad-edx-api-client",
+    "clientId": "grad-institute-api-client",
     "scopes": [
       "READ_SCHOOL",
       "READ_SCHOOL_CONTACT",
