Changes to fetch the grad specific grad properties from grad-school-api.

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -46,6 +46,10 @@ spring:
             client-id: ${GRAD_INSTITUTE_API_CLIENT_NAME}
             client-secret: ${GRAD_INSTITUTE_API_CLIENT_SECRET}
             authorization-grant-type: client_credentials
+          grad-school-api-client:
+            client-id: ${GRAD_SCHOOL_API_CLIENT_NAME}
+            client-secret: ${GRAD_SCHOOL_API_CLIENT_SECRET}
+            authorization-grant-type: client_credentials
         provider:
           trax-api-client:
             issuer-uri: ${TOKEN_ISSUER_URL}
@@ -53,7 +57,17 @@ spring:
           grad-institute-api-client:
             issuer-uri: ${TOKEN_ISSUER_URL}
             token-uri: ${TOKEN_ISSUER_URL}/protocol/openid-connect/token
-
+          grad-school-api-client:
+            issuer-uri: ${TOKEN_ISSUER_URL}
+            token-uri: ${TOKEN_ISSUER_URL}/protocol/openid-connect/token
+  data:
+    redis:
+      repositories:
+        enabled: true
+      host: ${REDIS_URL}
+      port: ${REDIS_PORT}
+      password: ${REDIS_SECRET}
+      username: ${REDIS_USER}
 #Logging properties
 logging:
   file:
@@ -132,13 +146,6 @@ nats:
   maxReconnect: ${NATS_MAX_RECONNECT}
   connectionName: GRAD-TRAX-API
 
-#Redis
-redis:
-  url: ${REDIS_URL}
-  port: ${REDIS_PORT}
-  user: ${REDIS_USER}
-  secret: ${REDIS_SECRET}
-
 #Scheduler
 cron:
   scheduled:
@@ -205,6 +212,9 @@ endpoint:
       url: ${STUDENT_ADMIN_URL_ROOT}district/%s
     authority-details:
       url: ${STUDENT_ADMIN_URL_ROOT}authority/%s
+  grad-school-api:
+    get-grad-details:
+      url: ${GRAD_SCHOOL_API_URL_ROOT}api/v1/grad-school
 
 # other properties
 props:
