--- a/api/pom.xml
+++ b/api/pom.xml
@@ -42,7 +42,7 @@
         <maven.compiler.version>3.10.1</maven.compiler.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <springdoc.version>1.6.9</springdoc.version>
         <shedlock.version>4.20.0</shedlock.version>
         <nats.version>2.11.0</nats.version>
