--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -45,6 +45,10 @@ spring:
             client-id: ${GRAD_INSTITUTE_API_CLIENT_NAME}
             client-secret: ${GRAD_INSTITUTE_API_CLIENT_SECRET}
             authorization-grant-type: client_credentials
+          grad-school-api-client:
+            client-id: ${GRAD_SCHOOL_API_CLIENT_NAME}
+            client-secret: ${GRAD_SCHOOL_API_CLIENT_SECRET}
+            authorization-grant-type: client_credentials
         provider:
           trax-api-client:
             issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
@@ -52,10 +56,18 @@ spring:
           grad-institute-api-client:
             issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
             token-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/token
+          grad-school-api-client:
+            issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
+            token-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/token
   sql:
     init:
       data-locations: classpath:schema.sql
-
+  data:
+    redis:
+      repositories:
+        enabled: true
+      host: 'localhost'
+      port: '6370'
 #Logging properties
 logging:
   #pattern:
@@ -90,13 +102,6 @@ nats:
   url: test
   maxReconnect: 60
   connectionName: GRAD-TRAX-API
-
-#Redis
-redis:
-  url: '127.0.0.1'
-  port: '54321'
-  user: 'default'
-  secret: 'its-a-secret'
 
 #Scheduler
 cron:
@@ -164,7 +169,9 @@ endpoint:
       url: https://student-admin-8878b4-dev.apps.silver.devops.gov.bc.ca/district/%s
     authority-details:
       url: https://student-admin-8878b4-dev.apps.silver.devops.gov.bc.ca/authority/%s
-
+  grad-school-api:
+    get-grad-details:
+      url: https://grad-school-api-e14b44-dev.apps.silver.devops.gov.bc.ca/api/v1/grad-school
 # other properties
 props:
   school-cache-expiry-in-mins: 10
