--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -105,7 +105,8 @@ jobs:
           ${{ secrets.STUDENT_ADMIN_URL_ROOT }} \
           ${{ secrets.REDIS_URL }} \
           ${{ secrets.REDIS_PORT }} \
-          ${{ secrets.REDIS_USER }}
+          ${{ secrets.REDIS_USER }} \
+          ${{ secrets.GRAD_SCHOOL_NAMESPACE }}
           
           # Start rollout (if necessary) and follow it
           oc rollout restart deployment/${{ env.SPRING_BOOT_IMAGE_NAME }}
