--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,6 +49,8 @@
         <guava.version>30.1.1-jre</guava.version>
         <log4j.version>2.18.0</log4j.version>
         <resilience4j.version>1.7.1</resilience4j.version>
+        <embedded-redis.version>0.7.3</embedded-redis.version>
+        <redisson.version>3.15.1</redisson.version> <!-- DO NOT change-->
     </properties>
 
     <parent>
@@ -86,8 +88,9 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -172,7 +175,7 @@
         <dependency>
             <groupId>it.ozimov</groupId>
             <artifactId>embedded-redis</artifactId>
-            <version>0.7.3</version>
+            <version>${embedded-redis.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
