--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -175,7 +175,7 @@ endpoint:
     get-grad-details:
       url: https://grad-school-api-e14b44-dev.apps.silver.devops.gov.bc.ca/api/v1/grad-school
     get-grad-details-by-id:
-      url: ${GRAD_SCHOOL_API_URL_ROOT}api/v1/grad-school/search/%s
+      url: https://grad-school-api-e14b44-dev.apps.silver.devops.gov.bc.ca/api/v1/grad-school/search/%s
 # other properties
 props:
   school-cache-expiry-in-mins: 10
