--- a/.github/workflows/create-redis-cluster-DEV.yml
+++ b/.github/workflows/create-redis-cluster-DEV.yml
@@ -32,7 +32,7 @@ jobs:
           oc delete all,rc,svc,dc,route,pvc,secret,configmap,sa,RoleBinding -l app=redis-ha
       - name: Deploy Redis pods
         run: |
-          oc process -f redis/redis-ha.yaml -p REPLICAS=${{ env.REPLICAS }} | oc apply -f -
+          oc process -f tools/openshift/redis/redis-ha.yaml -p REPLICAS=${{ env.REPLICAS }} | oc apply -f -
       - name: Wait for Readiness
         run: |
           echo "Waiting for pods to be ready..."
