Final cleanup and addition of test and prod workflows

--- a/.github/workflows/create-redis-cluster-TEST.yml
+++ b/.github/workflows/create-redis-cluster-TEST.yml
@@ -1,8 +1,8 @@
-name: Create Redis Cluster - DEV
+name: Create Redis Cluster - TEST
 env:
   OPENSHIFT_SERVER: ${{ vars.OPENSHIFT_SERVER }}
   OPENSHIFT_TOKEN: ${{ secrets.OPENSHIFT_TOKEN }}
-  OPENSHIFT_NAMESPACE: ${{ vars.GRAD_NAMESPACE }}-dev
+  OPENSHIFT_NAMESPACE: ${{ vars.GRAD_NAMESPACE }}-test
   COMMON_NAMESPACE: ${{ vars.COMMON_NAMESPACE }}
   GRAD_NAMESPACE: ${{ vars.GRAD_NAMESPACE }}
   BUSINESS_NAMESPACE: ${{ vars.GRAD_BUSINESS_NAMESPACE }}
